# pagesource

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
src/pagesource/: __init__.py  browser.py  cli.py  downloader.py  utils.py
