[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagesource"
version = "0.1.0"
description = "Capture all resources from a webpage like browser DevTools Sources tab"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Tim Farrelly", email = "timf34@gmail.com" }
]
keywords = ["web", "scraping", "playwright", "cli", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
pagesource = "pagesource.cli:main"

[project.urls]
Homepage = "https://github.com/timf34/pagesource"
Repository = "https://github.com/timf34/pagesource"
Issues = "https://github.com/timf34/pagesource/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pagesource"]
